// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  maxWidth="340px"
  sx={
    Object {
      "mx": "auto",
    }
  }
>
  <LoginForm
    autoLoggingInState="waiting"
    email=""
    loginSuccess={[MockFunction]}
    onChangeEmail={[Function]}
    setAccessTokenExpiration={[MockFunction]}
    setRefreshTokenExpiration={[MockFunction]}
    switchMode={[Function]}
  />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests resend-email mode 1`] = `
<ForwardRef(Box)
  maxWidth="340px"
  sx={
    Object {
      "mx": "auto",
    }
  }
>
  <ResendEmailForm
    email=""
    onChangeEmail={[Function]}
    switchMode={[Function]}
  />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests reset-pasword mode 1`] = `
<ForwardRef(Box)
  maxWidth="340px"
  sx={
    Object {
      "mx": "auto",
    }
  }
>
  <PasswordResetRequestForm
    email=""
    onChangeEmail={[Function]}
    switchMode={[Function]}
  />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests signup mode 1`] = `
<ForwardRef(Box)
  maxWidth="340px"
  sx={
    Object {
      "mx": "auto",
    }
  }
>
  <SignupForm
    email=""
    onChangeEmail={[Function]}
    switchMode={[Function]}
  />
</ForwardRef(Box)>
`;
